# ImproveCppSkillsMecscherinCourse

./: CMakeLists.txt  OOP.cpp  OOP.h  OOP2.cpp  OOP2.h  README.md  RTTI_dynamic_cast.h  Singleton.h  StringClass.cpp  StringClass.h  abstract_classes_and_pure_virtual_functions.cpp  abstract_classes_and_pure_virtual_functions.h  auto_decltype.cpp  callback_functors_comparators.cpp  callback_functors_comparators.h  consts.cpp  consts.h  enum.cpp  explicit-methods.cpp  explicit-methods.h  main.cpp  multiple_inheritance.cpp  multiple_inheritance.h  operators.cpp  operators.h  pointers_to_functions.cpp  polymorphism.h  references.cpp  references.h  refferences.h  static_fields.cpp  static_fields.h  templates_intro.h  test.h  testcl.cpp  unions.cpp  virtual_destructor.cpp  virtual_destructor.h  virtual_inheritance.cpp  virtual_inheritance.h
Allocators/: alignments.cpp  allocator_behaviour_on_container_copy_assign.cpp  allocator_traits.cpp  allocators.cpp  allocators_implementation.cpp  allocators_in_vector.cpp  allocators_info.cpp  bit_fields.cpp  new_delete.cpp  rebinding_and_copying_allocators.cpp
Classes/: OOP.cpp  RTTI_dynamic_cast.cpp  Singleton.cpp  StringClass.cpp  StringClassMove.cpp  operators.cpp  pointers_to_members.cpp
CompileTimeComputations/: compile_time_fibonacci.cpp  compile_time_is_prime.cpp  constexpr.cpp  detecting_fields_count_in_structure.cpp  index_sequence.cpp
Containers/: deque_info.cpp  info.cpp  info_containers.cpp  iterators_invalidation_rules_containers.cpp  list_map_unordered_map.cpp  stack_queue_priority_queue.cpp  vector.cpp  (+3 more)
(+63 files in other folders)
