cmake_minimum_required(VERSION 3.23)
project(Mecha)

set(CMAKE_CXX_STANDARD 17)

add_executable(Mecha main.cpp references.h consts.h OOP.h StringClass.h operators.h static_fields.h Singleton.h explicit-methods.h callback_functors_comparators.h OOP2.h multiple_inheritance.h virtual_inheritance.h polymorphism.h)
